--- a/FoodSite.html
+++ b/FoodSite.html
@@ -88,7 +88,7 @@
 
       #home::before {
         content: "";
-        background: url("/Images/Tomato.jpg") no-repeat center center/cover;
+        background: url("/Tomato.jpg") no-repeat center center/cover;
         position: absolute;
         height: 100%;
         width: 100%;
@@ -126,7 +126,7 @@
   <body>
     <nav id="navbar">
       <div id="logo">
-        <img src="/Images/logo.jpg" alt="Logo" id="logo" />
+        <img src="/logo.jpg" alt="Logo" id="logo" />
       </div>
       <ul>
         <li class="item"><a href="#">Home</a></li>
